--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "pairist",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "firebase": "^4.9.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
-  },
-  "scripts": {
-    "creds-from-lpass": "scripts/creds-from-lpass",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "firebase deploy"
-  }
+	"name": "pairist",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"bootstrap": "3",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"firebase": "^4.9.0",
+		"flow-bin": "^0.63.1",
+		"husky": "^0.14.3",
+		"jest-enzyme": "^4.0.2",
+		"lint-staged": "^6.0.1",
+		"node-sass-chokidar": "^0.0.3",
+		"npm-run-all": "^4.1.2",
+		"prettier": "^1.10.2",
+		"react": "^16.2.0",
+		"react-bootstrap": "^0.32.0",
+		"react-dom": "^16.2.0",
+		"react-router-dom": "^4.2.2",
+		"react-scripts": "1.1.0",
+		"react-test-renderer": "^16.2.0"
+	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,json,css}": [
+			"prettier --single-quote --write",
+			"git add"
+		]
+	},
+	"scripts": {
+		"creds:lpass": "scripts/creds-from-lpass",
+		"precommit": "lint-staged",
+		"css:build": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+		"css:watch": "npm run css:build && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+		"js:start": "react-scripts start",
+		"js:build": "react-scripts build",
+		"test": "react-scripts test",
+		"build": "npm-run-all css:build js:build",
+		"start": "npm-run-all -p css:watch js:start",
+		"eject": "react-scripts eject",
+		"deploy": "firebase deploy"
+	}
 }
