--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"bootstrap": "3",
 		"enzyme": "^3.3.0",
 		"enzyme-adapter-react-16": "^1.1.1",
+		"eslint": "^4.16.0",
 		"firebase": "^4.9.0",
 		"flow-bin": "^0.63.1",
 		"husky": "^0.14.3",
@@ -34,10 +35,17 @@
 		"css:watch": "npm run css:build && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
 		"js:start": "react-scripts start",
 		"js:build": "react-scripts build",
+		"lint": "eslint src/**/*.js --fix",
 		"test": "react-scripts test",
 		"build": "npm-run-all css:build js:build",
 		"start": "npm-run-all -p css:watch js:start",
 		"eject": "react-scripts eject",
 		"deploy": "firebase deploy"
+	},
+	"devDependencies": {
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.5.1"
 	}
 }
