--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"babel-eslint": "^8.2.1",
 		"bootstrap": "3",
 		"enzyme": "^3.3.0",
 		"enzyme-adapter-react-16": "^1.1.1",
@@ -18,9 +19,12 @@
 		"react": "^16.2.0",
 		"react-bootstrap": "^0.32.0",
 		"react-dom": "^16.2.0",
+		"react-redux": "^5.0.6",
+		"react-redux-firebase": "^2.0.2",
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.0",
-		"react-test-renderer": "^16.2.0"
+		"react-test-renderer": "^16.2.0",
+		"redux": "^3.7.2"
 	},
 	"lint-staged": {
 		"src/**/*.{js,jsx,json,css}": [
