--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 	"dependencies": {
 		"babel-eslint": "^8.2.1",
 		"bootstrap": "3",
+		"dotenv": "^4.0.0",
 		"enzyme": "^3.3.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"eslint": "^4.16.0",
 		"firebase": "^4.9.0",
+		"firebase-server": "^0.12.0",
 		"flow-bin": "^0.63.1",
 		"husky": "^0.14.3",
 		"jest-enzyme": "^4.0.2",
@@ -34,7 +36,6 @@
 		]
 	},
 	"scripts": {
-		"creds:lpass": "scripts/creds-from-lpass",
 		"precommit": "lint-staged",
 		"css:build": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
 		"css:watch": "npm run css:build && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
