Add firebase command and README

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"build": "npm-run-all css:build js:build",
 		"start": "npm-run-all -p css:watch js:start",
 		"eject": "react-scripts eject",
+		"firebase": "firebase-server",
 		"deploy": "firebase deploy"
 	},
 	"devDependencies": {
