Restart with Vue.js and Bulma

--- a/package.json
+++ b/package.json
@@ -1,58 +1,105 @@
 {
-	"name": "pairist",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"babel-eslint": "^8.2.1",
-		"bootstrap": "3",
-		"dotenv": "^4.0.0",
-		"enzyme": "^3.3.0",
-		"enzyme-adapter-react-16": "^1.1.1",
-		"eslint": "^4.16.0",
-		"firebase": "^4.9.0",
-		"firebase-server": "^0.12.0",
-		"flow-bin": "^0.63.1",
-		"husky": "^0.14.3",
-		"jest-enzyme": "^4.0.2",
-		"lint-staged": "^6.0.1",
-		"node-sass-chokidar": "^0.0.3",
-		"npm-run-all": "^4.1.2",
-		"prettier": "^1.10.2",
-		"react": "^16.2.0",
-		"react-bootstrap": "^0.32.0",
-		"react-dom": "^16.2.0",
-		"react-redux": "^5.0.6",
-		"react-redux-firebase": "^2.0.2",
-		"react-router-dom": "^4.2.2",
-		"react-scripts": "1.1.0",
-		"react-test-renderer": "^16.2.0",
-		"redux": "^3.7.2"
-	},
-	"lint-staged": {
-		"src/**/*.{js,jsx,json,css}": [
-			"eslint --fix",
-			"prettier -write",
-			"git add"
-		]
-	},
-	"scripts": {
-		"precommit": "lint-staged",
-		"css:build": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-		"css:watch": "npm run css:build && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-		"js:start": "react-scripts start",
-		"js:build": "react-scripts build",
-		"lint": "eslint 'src/**' --fix",
-		"test": "react-scripts test",
-		"build": "npm-run-all css:build js:build",
-		"start": "npm-run-all -p firebase css:watch js:start",
-		"eject": "react-scripts eject",
-		"firebase": "firebase-server",
-		"deploy": "firebase deploy"
-	},
-	"devDependencies": {
-		"eslint-config-airbnb": "^16.1.0",
-		"eslint-plugin-import": "^2.8.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.5.1"
-	}
+  "name": "pairist",
+  "version": "1.0.0",
+  "description": "Pairing board for the modern era.",
+  "author": "Luan Santos <cfcluan@gmail.com>",
+  "private": true,
+  "scripts": {
+    "precommit": "lint-staged",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "unit": "jest --config test/unit/jest.conf.js",
+    "unit:watch": "npm run unit -- --watch",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --fix --ext .js,.vue build config src test/unit test/e2e/specs",
+    "build": "node build/build.js"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "eslint --fix",
+      "prettier -write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "buefy": "^0.6.2",
+    "firebase": "^4.9.0",
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^8.2.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.0",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.2.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "husky": "^0.14.3",
+    "jest": "^22.0.4",
+    "jest-serializer-vue": "^0.3.0",
+    "lint-staged": "^6.0.1",
+    "nightwatch": "^0.9.12",
+    "node-notifier": "^5.1.2",
+    "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "prettier": "^1.10.2",
+    "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue-jest": "^1.0.2",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
