--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.10",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
