--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "eslint --fix",
+      "eslint --fix --ext .js,.vue",
       "prettier -write",
       "git add"
     ]
