firebase config stuff
Signed-off-by: Luan Santos <cfcluan@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm-run-all -p dev firebase",
     "unit": "jest --config test/unit/jest.conf.js",
-    "unit:watch": "npm run unit -- --watch",
+    "unit:watch": "yarn unit -- --watch",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
+    "test": "yarn unit && yarn e2e",
     "lint": "eslint --fix --ext .js,.vue build config src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "yarn build && firebase deploy"
   },
   "lint-staged": {
     "src/**/*.{js,vue,jsx,json,css}": [
