--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "pairist-9de4d"
+    "default": "pairist-9de4d",
+    "dev": "pairist-dev",
+    "production": "pairist-9de4d"
   }
 }
