--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "private": true,
   "scripts": {
     "precommit": "lint-staged",
-    "firebase": "firebase-server -e",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm-run-all -p dev firebase",
+    "start": "yarn run dev",
     "unit": "jest --config test/unit/jest.conf.js",
     "unit:watch": "yarn unit -- --watch",
     "e2e": "node test/e2e/runner.js",
     "test": "yarn unit && yarn e2e",
     "lint": "eslint --fix --ext .js,.vue build config src test/unit test/e2e/specs",
     "build": "node build/build.js",
-    "deploy": "yarn build && firebase deploy"
+    "deploy:env": "yarn build && firebase deploy -P",
+    "deploy:dev": "yarn deploy:env dev",
+    "deploy:production": "yarn deploy:env production"
   },
   "lint-staged": {
     "src/**/*.{js,vue,jsx,json,css}": [
@@ -66,7 +67,6 @@
     "eslint-plugin-vue": "^4.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
-    "firebase-server": "^0.12.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
