--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     ]
   },
   "dependencies": {
-    "buefy": "^0.6.2",
     "firebase": "^4.9.0",
     "firebase-admin": "^5.8.1",
     "firebase-functions": "^0.8.1",
@@ -33,7 +32,8 @@
     "lodash": "^4.17.4",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5"
+    "vuefire": "^1.4.5",
+    "vuetify": "^0.17.6"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.10",
