Support for local pre-running test server to speed up e2e

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "yarn run dev",
     "unit": "jest --config test/unit/jest.conf.js",
     "unit:watch": "yarn unit -- --watch",
-    "e2e": "node test/e2e/runner.js",
+    "e2e:server": "NODE_ENV='testing' PORT=12000 webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "e2e": "PORT=12000 node test/e2e/runner.js",
     "test": "yarn unit && yarn e2e",
     "lint": "eslint --fix --ext .js,.vue build config src test/unit test/e2e/specs",
     "deploy:env": "firebase deploy -P",
@@ -74,6 +75,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "is-port-available": "^0.1.5",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "lint-staged": "^6.0.1",
