Vuex[Fire] first pass
- Made store containing data from current, still using vuefire for history
- Store controls notifications but not dialogs
- Components now dispatch actions directly to the store
- Team.vue code much MUCH simplified

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
-    "vuetify": "^0.17.6"
+    "vuetify": "^0.17.6",
+    "vuex": "^3.0.1",
+    "vuexfire": "^2.3.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.10",
