Backfill tests for main team store
Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "yarn run dev",
     "unit": "jest --config test/unit/jest.conf.js",
-    "unit:watch": "yarn unit -- --watch",
+    "unit:watch": "yarn unit --watch",
     "e2e:server": "NODE_ENV='testing' PORT=12000 webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "e2e": "PORT=12000 node test/e2e/runner.js",
     "test": "yarn unit && yarn e2e",
@@ -73,6 +73,7 @@
     "eslint-plugin-vue": "^4.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "firebase-mock": "^2.0.20",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
