--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "firebase-mock": "^2.0.20",
+    "flush-promises": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
