--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.10",
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -60,15 +60,15 @@
     "chalk": "^2.0.1",
     "chromedriver": "^2.35.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
+    "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.0",
     "es6-promise": "^4.2.4",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.2.0",
@@ -98,11 +98,11 @@
     "sass-loader": "^6.0.6",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
+    "url-loader": "^0.6.2",
+    "vue-jest": "^2.1.0",
+    "vue-loader": "^14.1.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.10.0",
