--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,7 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "functions": {
-    "predeploy": [
-      "npm --prefix $RESOURCE_DIR run lint"
-    ]
-  },
+  "functions": {},
   "hosting": {
     "public": "dist",
     "ignore": [
