--- a/package.json
+++ b/package.json
@@ -5,33 +5,35 @@
   "author": "Luan Santos <cfcluan@gmail.com>",
   "private": true,
   "scripts": {
-    "precommit": "chmod a-w migrations/*.migration.js && lint-staged",
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "yarn run dev",
-    "unit": "jest --config test/unit/jest.conf.js",
-    "unit:watch": "yarn unit --watch",
-    "e2e:server": "NODE_ENV='testing' PORT=12000 webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "e2e": "PORT=12000 node test/e2e/runner.js",
-    "test": "yarn unit && yarn e2e",
-    "lint": "eslint --fix --ext .js,.vue build config src test/unit test/e2e/specs",
-    "migrate:env": "node migrations/migrate.js $NODE_ENV",
-    "build:dev": "node build/build-dev.js",
-    "build:test": "node build/build-test.js",
-    "build:production": "node build/build.js",
-    "migrate:dev": "NODE_ENV=dev yarn migrate:env",
-    "migrate:test": "NODE_ENV=test yarn migrate:env",
-    "migrate:production": "NODE_ENV=production yarn migrate:env",
-    "set-version:env": "grep -Pho '(?<=APP_VERSION:)\\d+' dist/static/js/vendor.* | firebase -P $NODE_ENV database:set /config/version -y",
-    "deploy:env": "yarn build:$NODE_ENV && firebase deploy -P $NODE_ENV && yarn migrate:env && yarn set-version:env",
-    "deploy:dev": "NODE_ENV=dev yarn deploy:env",
-    "deploy:test": "NODE_ENV=test yarn deploy:env",
-    "deploy:production": "NODE_ENV=production yarn deploy:env"
+    "e2e": "vue-cli-service e2e --mode=e2e",
+    "test": "vue-cli-service test",
+    "lint": "vue-cli-service lint",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build --mode=$NODE_ENV",
+    "migrate": "node migrations/migrate.js $NODE_ENV",
+    "set-version": "scripts/set-version",
+    "deploy": "yarn build && firebase deploy -P $NODE_ENV && yarn migrate && yarn set-version",
+    "deploy:dev": "NODE_ENV=development yarn deploy",
+    "deploy:test": "NODE_ENV=test yarn deploy",
+    "deploy:production": "NODE_ENV=production yarn deploy"
   },
   "lint-staged": {
-    "src/**/*.{js,vue,jsx,json,css}": [
-      "eslint --fix --ext .js,.vue",
+    "*.js": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
       "git add"
     ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "gitHooks": {
+    "pre-commit": "chmod a-w migrations/*.migration.js && lint-staged"
   },
   "dependencies": {
     "firebase": "^4.9.0",
@@ -47,81 +49,21 @@
     "vuexfire": "^2.3.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0-beta.1",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.1",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
+    "@vue/cli-service": "^3.0.0-beta.1",
+    "@vue/eslint-config-prettier": "^3.0.0-beta.1",
     "@vue/test-utils": "^1.0.0-beta.10",
-    "autoprefixer": "^8.0.0",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^22.2.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.35.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^6.0.4",
-    "css-loader": "^0.28.0",
-    "es6-promise": "^4.2.4",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^22.0.4",
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "is-port-available": "^0.1.5",
-    "jest": "^22.0.4",
-    "jest-serializer-vue": "^0.3.0",
-    "lint-staged": "^6.0.1",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "prettier": "^1.10.2",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.6",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.8.1",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.6.2",
-    "vue-jest": "^2.1.0",
-    "vue-loader": "^14.1.1",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "lint-staged": "^6.0.0",
+    "stylelint": "^9.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.13"
+  }
 }
