--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": "^4.17.4",
     "pluralize": "^7.0.0",
     "vue": "^2.5.13",
+    "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
     "vuex": "^3.0.1",
@@ -73,7 +74,6 @@
     "prettier": "^1.10.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
-    "stylelint": "^9.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.13"
