Generalize entities into a shared schema
- Includes migration for history/current
- Makes saveHistory function more roboust

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:funcs": "scripts/build-functions",
+    "deploy:funcs": "yarn build:funcs && firebase deploy -P $TARGET_ENV",
     "migrate": "node migrations/migrate.js $TARGET_ENV",
     "deploy": "scripts/deploy",
     "deploy:staging": "TARGET_ENV=staging yarn deploy",
@@ -71,6 +72,7 @@
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
     "lint-staged": "^6.0.0",
+    "mkdirp": "^0.5.1",
     "prettier": "^1.10.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
