--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
   },
   "lint-staged": {
     "*.js": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ],
     "*.vue": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   },
   "browserslist": [
@@ -68,6 +66,8 @@
     "babel-jest": "^22.0.4",
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "cpx": "^1.5.0",
+    "eslint-plugin-lodash": "^2.6.1",
+    "eslint-plugin-lodash-fp": "^2.1.3",
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
     "lint-staged": "^7.0.0",
