--- a/.eslintrc
+++ b/.eslintrc
@@ -16,10 +16,7 @@
     "no-debugger": "off",
     "object-curly-spacing": [2, "always"],
     "array-bracket-spacing": [2, "never"],
-    "lodash/prefer-lodash-method": [2, {
-      "ignoreMethods": ["assign"],
-      "ignoreObjects": ["wrapper", "permutation"]
-    }],
+    "lodash/prefer-lodash-method": "off",
     "lodash/prefer-compact": "off"
   }
 }
