--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^4.9.0",
     "firebase-admin": "^5.8.2",
     "firebase-functions": "^0.8.1",
+    "immutable": "^4.0.0-rc.9",
     "interact.js": "^1.2.8",
     "js-combinatorics": "^0.5.3",
     "lodash": "^4.17.4",
