--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "interact.js": "^1.2.8",
     "js-combinatorics": "^0.5.3",
     "lodash": "^4.17.4",
+    "munkres-js": "^1.2.2",
     "pluralize": "^7.0.0",
     "vue": "^2.5.13",
     "vue-moment": "^3.2.0",
