--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "clean": "yarn rimraf dist",
-    "e2e": "vue-cli-service e2e --mode=e2e",
-    "test": "vue-cli-service test",
+    "e2e": "vue-cli-service test:e2e --mode=e2e",
+    "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -65,9 +65,11 @@
     "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
     "@vue/cli-service": "^3.0.0-beta.1",
     "@vue/eslint-config-standard": "^3.0.0-beta.1",
+    "@vue/server-test-utils": "^1.0.0-beta.25",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.0.4",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "cpx": "^1.5.0",
     "eslint-plugin-lodash": "^2.6.1",
@@ -80,6 +82,7 @@
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "vue-server-renderer": "^2.5.17",
     "vue-template-compiler": "^2.5.13"
   }
 }
