--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "pre-commit": "chmod a-w migrations/*.migration.js && lint-staged"
   },
   "dependencies": {
-    "@firebase/app-types": "^0.1.1",
+    "@firebase/app-types": "^0.3.2",
     "babel-polyfill": "^6.26.0",
     "big-integer": "^1.6.27",
-    "firebase": "^4.9.0",
-    "firebase-admin": "^5.8.2",
-    "firebase-functions": "^0.8.1",
+    "firebase": "^5.5.8",
+    "firebase-admin": "^6.1.0",
+    "firebase-functions": "^2.1.0",
+    "grpc": "^1.16.0",
     "immutable": "^4.0.0-rc.9",
     "interact.js": "^1.2.8",
     "js-combinatorics": "^0.5.3",
@@ -49,7 +50,7 @@
     "munkres-js": "^1.2.2",
     "pluralize": "^7.0.0",
     "vue": "^2.5.13",
-    "vue-moment": "^3.2.0",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
     "vuex": "^3.0.1",
@@ -64,19 +65,19 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
     "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
     "@vue/cli-service": "^3.0.0-beta.1",
-    "@vue/eslint-config-standard": "^3.0.0-beta.1",
+    "@vue/eslint-config-standard": "^4.0.0",
     "@vue/server-test-utils": "^1.0.0-beta.25",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "^22.0.4",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-inline-environment-variables": "^0.3.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "cpx": "^1.5.0",
-    "eslint-plugin-lodash": "^2.6.1",
-    "eslint-plugin-lodash-fp": "^2.1.3",
+    "eslint-plugin-lodash": "^3.1.0",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^8.0.4",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
