--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "pairist",
   "version": "1.0.0",
+  "private": true,
   "description": "Pairing board for the modern era.",
   "author": "Luan Santos <cfcluan@gmail.com>",
-  "private": true,
   "scripts": {
     "clean": "yarn rimraf dist",
     "e2e": "vue-cli-service test:e2e --mode=e2e",
@@ -51,7 +51,8 @@
     "vue": "^2.5.13",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0",
+    "vuedraggable": "^2.16.0",
+    "vuetify": "^1.3.0",
     "vuex": "^3.0.1",
     "vuexfire": "^2.3.0"
   },
@@ -59,6 +60,7 @@
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "@mdi/font": "^3.0.39",
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.1",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
@@ -82,7 +84,9 @@
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-server-renderer": "^2.5.17",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vuetify-loader": "^1.0.5"
   }
 }
