--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,11 @@
     "rules": "database.rules.json"
   },
   "functions": {
-    "source": "dist/functions"
+    "source": "functions",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   },
   "hosting": {
     "public": "dist",
