--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "description": "Pairing board for the modern era.",
   "author": "Luan Santos <cfcluan@gmail.com>",
   "scripts": {
-    "clean": "yarn rimraf dist",
     "e2e": "vue-cli-service test:e2e --mode=e2e",
     "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:funcs": "scripts/build-functions",
-    "deploy:funcs": "yarn build:funcs && firebase deploy -P $TARGET_ENV",
+    "deploy:funcs": "firebase deploy -P $TARGET_ENV",
     "migrate": "node migrations/migrate.js $TARGET_ENV",
     "deploy": "scripts/deploy",
     "deploy:staging": "TARGET_ENV=staging yarn deploy",
@@ -36,30 +34,30 @@
     "pre-commit": "chmod a-w migrations/*.migration.js && lint-staged"
   },
   "dependencies": {
-    "@firebase/app-types": "^0.3.2",
+    "@firebase/app-types": "^0.4.0",
     "babel-polyfill": "^6.26.0",
     "big-integer": "^1.6.27",
-    "firebase": "^4.9.0",
-    "firebase-admin": "^5.8.2",
-    "firebase-functions": "^2.1.0",
+    "firebase": "^6.0.4",
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^2.3.1",
     "immutable": "^4.0.0-rc.9",
     "interact.js": "^1.2.8",
     "js-combinatorics": "^0.5.3",
     "lodash": "^4.17.4",
     "munkres-js": "^1.2.2",
     "pluralize": "^7.0.0",
-    "vue": "^2.5.13",
+    "vue": "^2.6.10",
     "vue-moment": "^4.0.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.6",
     "vuedraggable": "^2.16.0",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.0.1",
+    "vuetify": "^1.5.14",
+    "vuex": "^3.1.1",
     "vuexfire": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@mdi/font": "^3.0.39",
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.1",
@@ -67,26 +65,25 @@
     "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
     "@vue/cli-service": "^3.0.0-beta.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/server-test-utils": "^1.0.0-beta.25",
-    "@vue/test-utils": "^1.0.0-beta.10",
+    "@vue/server-test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "cpx": "^1.5.0",
-    "eslint-plugin-lodash": "^3.1.0",
+    "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
     "lint-staged": "^8.0.4",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
-    "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-server-renderer": "^2.5.17",
-    "vue-template-compiler": "^2.5.13",
-    "vuetify-loader": "^1.0.5"
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-server-renderer": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   }
 }
