--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@firebase/app-types": "^0.4.0",
     "babel-polyfill": "^6.26.0",
-    "big-integer": "^1.6.27",
+    "big-integer": "^1.6.43",
     "firebase": "^6.0.4",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
@@ -49,7 +49,7 @@
     "vue": "^2.6.10",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
-    "vuedraggable": "^2.16.0",
+    "vuedraggable": "^2.21.0",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.1",
     "vuexfire": "^3.0.0"
@@ -58,7 +58,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "@mdi/font": "^3.0.39",
+    "@mdi/font": "^3.6.95",
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.1",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
@@ -69,14 +69,15 @@
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "colors": "^1.3.3",
     "cpx": "^1.5.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "firebase-mock": "^2.0.20",
     "flush-promises": "^1.0.0",
-    "lint-staged": "^8.0.4",
+    "lint-staged": "^8.1.7",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
     "stylus": "^0.54.5",
