--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vue": "^2.6.10",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
+    "vue-showdown": "^2.4.1",
     "vuedraggable": "^2.21.0",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.1",
