--- a/.env.e2e
+++ b/.env.e2e
@@ -2,4 +2,4 @@ VUE_APP_FIREBASE_API_KEY="AIzaSyC4IhaLy_VyCruDfhRJ7NQn_47nxnTnotA"
 VUE_APP_FIREBASE_AUTH_DOMAIN="pairist-test.firebaseapp.com"
 VUE_APP_FIREBASE_URL="https://pairist-test.firebaseio.com"
 VUE_APP_HISTORY_CHUNK_DURATION="5000"
-NODE_ENV=production
+NODE_ENV=test
