--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@firebase/app-types": "^0.4.0",
     "babel-polyfill": "^6.26.0",
     "big-integer": "^1.6.43",
+    "chromedriver": "^77.0.0",
     "firebase": "^6.0.4",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
@@ -61,7 +62,7 @@
     "@babel/preset-env": "^7.4.5",
     "@mdi/font": "^3.6.95",
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.1",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.0.0-rc.7",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.1",
     "@vue/cli-plugin-unit-jest": "^3.0.0-beta.1",
     "@vue/cli-service": "^3.0.0-beta.1",
