--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "big-integer": "^1.6.48",
     "emoji-mart": "^3.0.0",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "firebase-functions": "^3.11.0",
+    "js-combinatorics": "^0.5.3",
+    "lodash": "^4.17.20",
+    "munkres-js": "^1.2.2",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^12.1.1",
     "react-dom": "^17.0.1",
