Add predeploy script for hosting
This makes sure we've pulled in dependencies and rebuilt the site before
deploying the front-end.

--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,7 @@
     }
   },
   "hosting": {
+    "predeploy": ["yarn install", "yarn build"],
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
