--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "scripts/deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
