--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "typescript": "4.1.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "scripts/start",
+    "build": "scripts/build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "deploy": "scripts/deploy"
