Include Pairist version when building app
This exposes the current app version as a global variable
`PAIRIST_VERSION`, and makes it visible as a tooltip when hovering over
the logo in the app header.

This is meant to help users know exactly which version they've deployed.

--- a/scripts/build
+++ b/scripts/build
@@ -17,6 +17,7 @@ fi
 set -x
 
 # Build project
+REACT_APP_PAIRIST_VERSION=$(node -p "require('./package').version") \
 REACT_APP_FIREBASE_PROJECT_ID=${PAIRIST_FIREBASE_PROJECT_ID} \
 REACT_APP_FIREBASE_API_KEY=${PAIRIST_FIREBASE_API_KEY} \
 REACT_APP_FIREBASE_AUTH_DOMAIN="${PAIRIST_FIREBASE_PROJECT_ID}.firebaseapp.com" \
