Change version to 2.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pairist",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "private": true,
   "description": "Pairing board for the modern era.",
   "contributors": [
