Read env vars from .env.pairist file if given
This is intended to make reproducible deployment and development easier.
Now, if there is a file called .env.pairist in the current directory
when these scripts are run, it'll be sourced and env vars will be loaded
from it.

Also added a .env.pairist.sample to make this simpler.

--- a/scripts/build
+++ b/scripts/build
@@ -2,6 +2,15 @@
 
 set -e
 
+if [ -f ".env.pairist" ]; then
+  echo "Loading env vars from .env.pairist file"
+  set -a
+  source ".env.pairist"
+  set +a
+else
+  echo "No .env.pairist file found"
+fi
+
 if [ -z "$PAIRIST_FIREBASE_PROJECT_ID" ]; then
   echo "PAIRIST_FIREBASE_PROJECT_ID is not set."
   echo "This should be set to your Firebase project ID."
