--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-feather": "^2.0.3",
     "react-firebase-hooks": "^2.1.1",
     "react-markdown": "^5.0.3",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "remark-gfm": "^1.0.0"
   },
   "devDependencies": {
     "@craco/craco": "^5.6.2",
