--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "Reid Mitchell <reidmitchell1@gmail.com>"
   ],
   "dependencies": {
+    "@iconify-icons/la": "^1.1.0",
+    "@iconify/react": "^1.1.3",
     "big-integer": "^1.6.48",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
