--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@iconify-icons/la": "^1.1.0",
     "@iconify/react": "^1.1.3",
+    "@material-ui/core": "^4.11.2",
     "big-integer": "^1.6.48",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "firebase-functions": "^3.11.0",
+    "import": "^0.0.6",
     "js-combinatorics": "^0.5.3",
     "lodash": "^4.17.20",
     "munkres-js": "^1.2.2",
